# sugarscope

./: .gitignore  LICENSE  README.md
assets/: sample.conf.toml
backend/: Cargo.toml  Dockerfile
backend/src/: application_settings.rs  database.rs  librelink.rs  main.rs  measurement.rs  webserver.rs
docs/: index.html  license.html  privacy.html
ios/GlucoScope/: GlucoScopeApp.swift
ios/GlucoScope.xcodeproj/: project.pbxproj
ios/GlucoScope/Data/: DataSource.swift  DataSourceConfiguration.swift  DataSourceService.swift  GlucoScopeDataSource.swift
ios/GlucoScope/Extension/: Calendar.swift  Colors.swift  Double.swift
ios/GlucoScope/Model/: GlucoseMeasurement.swift
ios/GlucoScope/Preferences/: Preference.swift  PreferenceService.swift  PreferenceStorage.swift
ios/GlucoScope/Resources/: themes.json
ios/GlucoScope/Service/: MeasurementComponents.swift
ios/GlucoScope/View/: AppView.swift  ColoredLineGraph.swift  GraphOverlayMenu.swift  GraphRangeSelector.swift  IndicatorView.swift  MainView.swift
ios/SugarScope/: GlucoScopeApp.swift  SugarScopeApp.swift
ios/SugarScope.xcodeproj/: project.pbxproj
ios/SugarScope/Data/: DataSource.swift  DataSourceConfiguration.swift  DataSourceService.swift  NightscoutDataSource.swift  SugarScopeDataSource.swift
ios/SugarScope/Extension/: Color.swift  ColorHex.swift  ProjectVersion.swift  RoundedCorner.swift
ios/SugarScope/Extensions/: Logger.swift
ios/SugarScope/Model/: Theme.swift
ios/SugarScope/Preferences/: Preference.swift  PreferenceService.swift  PreferenceStorage.swift
ios/SugarScope/View/: Tabber.swift  (+8 more)
(+73 files in other folders)
