[package]
name = "sugarscope"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.25"
simple_logger = "5.0.0"
anyhow = "1.0.95"
chrono = "0.4.39"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
config = "0.15"
toml = "0.8"
warp = "0.3.7"
influxdb = { version = "0.7.2", features = ["derive"] }

librelink-client = { path = "../libre-link-client-main" }
serde_json = "1.0.138"
